--- a/index.html
+++ b/index.html
@@ -67,7 +67,6 @@
         <header>
             <h1>Multistep Quasimetric Learning for Scalable Goal-conditioned Reinforcement Learning</h1>
             <div class="authors">
-                <!-- Example author with hyperlinks. Replace `#` with actual URLs as needed. -->
                 <span class="author"><a href="https://wj2003b.github.io" target="_blank">Bill Zheng</a></span>
                 <span class="affil">1</span>
                 <span class="author"><a href="https://people.eecs.berkeley.edu/~vmyers/" target="_blank">Vivek Myers</a></span>
@@ -84,10 +83,6 @@
                 <span class="institution">UC Berkeley</span>
                 <span class="affil">2</span>
                 <span class="institution">Princeton University</span>
-                <!-- <span class="affil">1</span> -->
-                <!-- <span class="institution">Affiliation 1</span> -->
-                <!-- <span class="affil">2</span> -->
-                <!-- <span class="institution">Affiliation 2</span> -->
             </div>
             <div class="links">
                 <span class="link">
@@ -104,160 +99,100 @@
         </header>
 
         <main>
-            <section>
+            <!-- <section>
                 <div class="summary">
                     <img src="static/figures/main_fig.svg" alt="Overview" />
+                </div>
+            </section> -->
+
+            <section>
+                <div>
+                    <div class="wide margin abstract">
+                        <h3>Abstract</h3>
+                        <p>
+                            Learning how to reach goals in an environment is a longstanding challenge in AI, yet reasoning over long horizons remains a challenge for modern methods. The key question is how to estimate the temporal distance between pairs of observations. While temporal difference methods leverage local updates to provide optimality guarantees, they often perform worse than Monte Carlo methods that perform global updates (e.g., with multi-step returns), which lack such guarantees. We show how these approaches can be integrated into a practical GCRL method that fits a quasimetric distance using a multistep Monte-Carlo return. We show our method outperforms existing GCRL methods on long-horizon simulated tasks with up to 4000 steps, even with visual observations. We also demonstrate that our method can enable stitching in the real- world robotic manipulation domain (Bridge setup). Our approach is the first end-to-end GCRL method that enables multistep stitching in this real-world manipulation domain from an unlabeled offline dataset of visual observations.
+                        </p>
+                    </div>
+
                 </div>
             </section>
 
             <section>
-                <div class="columns">
-                    <div class="wide margin abstract">
-                        <h3>Abstract</h3>
-                        <p>
-                            The problem of learning how to reach goals in an environment has been a longstanding
-                            challenge in for AI researchers. Effective goal-conditioned reinforcement learning (GCRL)
-                            methods promise to enable reaching distant goals without task-specific rewards by stitching
-                            together past experiences of different complexity. Mathematically, there is a duality
-                            between the notion of optimal goal-reaching value functions (the likelihood of success at
-                            reaching a goal) and temporal distances (transit times states). Recent works have exploited
-                            this property by learning quasimetric distance representations that stitch long-horizon
-                            behaviors using the inductive bias of their architecture. These methods have shown promise
-                            in simulated benchmarks, reducing value learning to a shortest-path problem. But
-                            quasimetric, and more generally, goal-conditioned RL methods still struggle in complex
-                            environments with stochasticity and high-dimensional (visual) observations. There is a
-                            fundamental tension between the local dynamic programming (TD backups, temporal distances)
-                            that enables optimal shortest-path reasoning in theory and the statistical global MC updates
-                            (multistep returns, suboptimal in theory). We show how these approaches can be integrated
-                            into a practical GCRL method that fits a quasimetric distance using a multistep Monte-Carlo
-                            return. We show our method outperforms existing GCRL methods on long-horizon simulated tasks
-                            with up to 4000 steps, even with visual observations. We also demonstrate that our method
-                            can enable stitching in the real-world robotic manipulation domain (Bridge setup). Our
-                            approach is the first end-to-end GCRL method that enables multistep stitching in this
-                            real-world manipulation domain from an unlabeled offline dataset of visual observations.
-                        </p>
+                <div>
+                    <h3>Motivation</h3>
+                    <div style="text-align: center;">
+                            <img src="static/figures/mainfig.svg" style="width:80%;" />
                     </div>
-                    <div class="third vertical figure">
-                        <img src="static/figures/hparam.svg" />
-                    </div>
+                    <p>In goal-conditioned off-policy RL, it is a highly nontrivial task to perform task-stitching: imagine you have seen two separate tasks in a training dataset, and you want to combine them together in evaluation. How should we do that? Recently, quasimetric architecture for value learning has demonstrated. Multistep Quasimetric Estimation (MQE) addresses the following challenges:</p>
+                <ol>
+                    <li>How can we scale up the horizon generalization capabilities of value learning using quasimetric distance representations?</li>
+                    <li>How can we provide a good quasimetric method for real-world robotic manipulation tasks?</li>
+                </ol>
                 </div>
             </section>
 
             <section>
                 <div>
                     <h3>Method</h3>
-                    <img src="static/figures/method.png" />
+                    <p>The main idea of MQE is that to incorporate multistep backup... </p>
+                    <details>
+                        <summary style="cursor: pointer; font-size: 1em; margin: 0.5em 0;">
+                            Show pseudocode
+                        </summary>
+                        <img src="static/figures/method.png" style="margin-top:1em; max-width:100%;" />
+                    </details>
                 </div>
             </section>
 
             <section>
                 <div>
                     <h3>Experiments</h3>
+                    
                     <h4>OGBench Evaluation</h4>
+                    <div style="display: flex; justify-content: center; align-items: flex-start; gap: 20px; margin-bottom: 1em;">
+                        <div style="display: flex; align-items: flex-start; gap: 20px; width: 100%;">
+                            <div style="flex: 1; min-width: 200px;">
+                                <p>
+                                    <ul>
+                                        <li>MQE achieves the strongest performance against a variety of offline RL methods on OGBench (90 tasks in total) across both state and pixel-based observations.</li>
+                                        <li>In particular, MQE outperforms both comparable quasimetric value learning methods (QRL, CMD, TMD) as well as horizon-reduction methods (n-SAC+BC, HIQL) <i>without requiring any hierarchical components</i>!</li>
+                                    </ul>
+                                </p>
+                            </div>
+                            <img src="static/figures/results-bar.png" alt="Main Results Bar Chart" style="flex: 1; max-width: 48%; height: auto; border: none; border-radius: 5px; margin-left: 0;">
+                        </div>
+                    </div>
+                    <details>
+                    <summary style="cursor: pointer; font-size: 1em; margin: 0.5em 0;">
+                        Show Complete Results Table
+                    </summary>
                     <img src="static/figures/ogbench.png" />
+                    </details>
                     <h4>OGBench Rollouts</h4>
                     <video src="https://res.cloudinary.com/dp7qzzmt2/video/upload/v1760397472/scene_rh6jgn.mp4" controls></video>
+                    <h4>Real-World Evaluation</h4>
                 </div>
             </section>
 
-            <!-- <section> -->
-            <!--     <h2>Method</h2> -->
-            <!--     <p> -->
-            <!--         Proin efficitur vehicula justo vel varius. Pellentesque habitant morbi tristique senectus et netus -->
-            <!--         et malesuada fames ac turpis egestas. Nunc nunc odio, iaculis non sapien non, semper cursus metus. -->
-            <!--         Vivamus pellentesque vitae nulla eget commodo. Sed at massa vitae urna fringilla mollis. Sed -->
-            <!--         vestibulum semper risus sit amet dictum. Donec et maximus turpis. Praesent congue ante sit amet ex -->
-            <!--         bibendum dapibus. Suspendisse rutrum, purus eu faucibus sollicitudin, odio libero consectetur est, -->
-            <!--         eget facilisis libero odio ac nisl. Fusce fringilla, dui sed aliquet varius, ex sapien ullamcorper -->
-            <!--         erat, a feugiat nibh orci vitae nisl. Nam dapibus arcu nisi, nec efficitur dolor ullamcorper nec. -->
-            <!--         Praesent lacus leo, interdum id consectetur a, egestas id purus. Cras tincidunt dolor elementum elit -->
-            <!--         gravida, id faucibus dolor suscipit. Sed volutpat elementum turpis, eleifend imperdiet lorem -->
-            <!--         tincidunt quis. -->
-            <!--     </p> -->
-            <!--     <div class="columns"> -->
-            <!--         <div class="wide"> -->
-            <!--             <img src="static/figures/img1.svg" /> -->
-            <!--         </div> -->
-            <!--         <div class="thin"> -->
-            <!--             <p> -->
-            <!--                 <b>Figure.</b> -->
-            <!--                 Ut placerat tellus odio, eget fermentum magna tincidunt a. Aliquam at fermentum nunc. Proin -->
-            <!--                 odio sapien, ultrices vel massa ut, vehicula tincidunt augue. Fusce quis erat sed quam -->
-            <!--                 euismod porttitor nec vel nunc. In id sem posuere urna euismod ultrices. Nam pharetra -->
-            <!--                 pharetra ipsum, et commodo augue facilisis eu. -->
-            <!--             </p> -->
-            <!--         </div> -->
-            <!--     </div> -->
-            <!-- </section> -->
+            <section>
+                <div>
+                    <h3>Ablations</h3>
+                    
+                    <h4>Can we get a better distance representation compared to other RL methods?</h4>
+                    <p>Let's take a look at what are the distances that we actually learn from these methods. We use <span style="font-family: 'American Typewriter', 'Courier New', Courier, monospace;">antmaze-large-explore</span> to find the learned distances $d(s, g)$. As the trajectories inside the dataset is highly noisy, we can use this to empirically compare how well our value functions are being distilled.</p>
+                    <figure style="text-align:center;">
+                        <img src="static/figures/distances.png" alt="Learned distances figure" style="display:block; margin-left:auto; margin-right:auto;">
+                        <figcaption style="font-size:0.95em; margin-top:0.5em;">
+                            Distance visualization with several offline RL methods.
+                        </figcaption>
+                    </figure>
+                    <p>From these figures</p>
+                    <h4>OGBench Rollouts</h4>
+                    <video src="https://res.cloudinary.com/dp7qzzmt2/video/upload/v1760397472/scene_rh6jgn.mp4" controls></video>
+                    <h4>Real-World Evaluation</h4>
+                </div>
+            </section>
 
-            <!-- <section> -->
-            <!--     <h2>Analysis</h2> -->
-            <!--     <div class="theorem"> -->
-            <!--         <span>Theorem 1</span> -->
-            <!--         <span>Theoretical Result</span> -->
-            <!--         Vivamus mi quam, vehicula quis leo commodo, efficitur dignissim diam. Mauris sollicitudin sapien -->
-            <!--         sem, non sagittis mauris tincidunt in. -->
-            <!--     </div> -->
-            <!--     <p> -->
-            <!--         Integer viverra dapibus tempor. Morbi ac orci lorem. Aliquam nec ligula ipsum. Praesent at tempor -->
-            <!--         nisl. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Sed -->
-            <!--         dapibus, lectus finibus volutpat dictum, ipsum tortor rhoncus nisl, eget ullamcorper turpis erat id -->
-            <!--         felis. -->
-            <!--     </p> -->
-            <!-- </section> -->
-
-            <!-- <section> -->
-            <!--     <h2>Visualization</h2> -->
-            <!--     <div class="margin"> -->
-            <!--         <img src="static/figures/img1.svg" /> -->
-            <!--         <p class="caption"> -->
-            <!--             <b>Figure.</b> -->
-            <!--             Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. -->
-            <!--             Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero -->
-            <!--             sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend leo. -->
-            <!--             Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum sed, -->
-            <!--             commodo vitae, ornare sit amet, wisi. Aenean fermentum, elit eget tincidunt condimentum, eros -->
-            <!--             ipsum rutrum orci, sagittis tempus lacus enim ac dui. Donec non enim in turpis pulvinar -->
-            <!--             facilisis. Ut felis. Praesent dapibus, neque id cursus faucibus, tortor neque egestas augue, eu -->
-            <!--             vulputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis, accumsan -->
-            <!--             porttitor, facilisis luctus, metus -->
-            <!--         </p> -->
-            <!--     </div> -->
-            <!-- </section> -->
-
-            <!-- <section> -->
-            <!--     <h2>Results</h2> -->
-            <!--     <div class="columns"> -->
-            <!--         <div class="half"> -->
-            <!--             <img src="static/figures/img3.svg" /> -->
-            <!--             <p class="caption"> -->
-            <!--                 Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis -->
-            <!--                 egestas. Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. -->
-            <!--                 placerat eleifend leo. Quisque sit amet est et sapien ullamcorper pharetra. Eget tincidunt -->
-            <!--                 condimentum, eros ipsum rutrum orci, sagittis tempus lacus enim ac dui. -->
-            <!--             </p> -->
-            <!--         </div> -->
-            <!--         <div class="half"> -->
-            <!--             <img src="static/figures/img3.svg" /> -->
-            <!--             <p class="caption"> -->
-            <!--                 Vestibulum tortor quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu -->
-            <!--                 libero sit amet quam egestas semper. Aenean ultricies mi vitae est. Mauris placerat eleifend -->
-            <!--                 leo. Quisque sit amet est et sapien ullamcorper pharetra. Vestibulum erat wisi, condimentum -->
-            <!--                 sed, commodo vitae, ornare sit amet, wisi. -->
-            <!--             </p> -->
-            <!--         </div> -->
-            <!--     </div> -->
-            <!-- </section> -->
-
-            <!-- <section> -->
-            <!--     <h2> -->
-            <!--         ${\bf B\kern-.05em{\small I\kern-.025em B}\kern-.08em -->
-            <!--         T\kern-.1667em\lower.7ex\hbox{E}\kern-.125emX}$ -->
-            <!--     </h2> -->
-            <!--     <pre class="language-bibtex bibtex" id="bibtex" onclick="selectContent('#bibtex')"><code>@misc{TODO, -->
-  <!-- TODO -->
-<!-- }</code></pre> -->
-            <!-- </section> -->
         </main>
     </body>
 </html>
